Changed filepath to config for Jar File loading